testing custom styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,78 @@
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// custom brand colors
+/* For use in src/lib/core/theming/_palette.scss */
+$md-cxgreen: (
+    50 : #e0f6e0,
+    100 : #b3e9b3,
+    200 : #80da80,
+    300 : #4dcb4d,
+    400 : #26bf26,
+    500 : #00b400,
+    600 : #00ad00,
+    700 : #00a400,
+    800 : #009c00,
+    900 : #008c00,
+    A100 : #b8ffb8,
+    A200 : #85ff85,
+    A400 : #52ff52,
+    A700 : #39ff39,
+    contrast: (
+        50 : #000000,
+        100 : #000000,
+        200 : #000000,
+        300 : #000000,
+        400 : #ffffff,
+        500 : #ffffff,
+        600 : #ffffff,
+        700 : #ffffff,
+        800 : #ffffff,
+        900 : #ffffff,
+        A100 : #000000,
+        A200 : #000000,
+        A400 : #000000,
+        A700 : #000000,
+    )
+);
+
+
+
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$LaunchPad-PWA-primary: mat-palette($md-cxgreen);
+$LaunchPad-PWA-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$LaunchPad-PWA-warn: mat-palette($mat-red);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+// $LaunchPad-PWA-theme: mat-light-theme((
+$LaunchPad-PWA-theme: mat-dark-theme((
+  color: (
+    primary: $LaunchPad-PWA-primary,
+    accent: $LaunchPad-PWA-accent,
+    warn: $LaunchPad-PWA-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($LaunchPad-PWA-theme);
+
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
